fix nav alignment

--- a/css/case-study.css
+++ b/css/case-study.css
@@ -589,7 +589,7 @@ a.anchor {
   padding: 0;
   transition: all 1s ease-in-out;
   max-width: 100%;
-  max-height: 100%;
+  height: auto;
   border-radius: .25rem;
 }
 
